# nextjs-starter

./: Cargo.toml  README.md  install.sh
src/: main.rs
template/: next.config.mjs
template/.github/workflows/: deploy.yml
